# CLion-DLL-AutoClicker-Example

./: CMakeLists.txt  README.md  dllMain.cpp
source/me/sleepyfish/autoclicker/: ClickUtils.h  Utils.h
